# p2/routes/categories.js
@@ -1,6 +1,7 @@
 const routes = require('express').Router();
 const categoriesController = require('../controllers/categories');
 const validate = require('../middlewares/validate');
+const ensureAuth = require('../middlewares/ensureAuth');
 const { categorySchema } = require('../validators/category.schema');
 
 // Get all categories
@@ -27,10 +28,11 @@ routes.get('/:id', /*
 categoriesController.getCategoryById);
 
 // Create a new category
-routes.post('/', validate(categorySchema), /*
+routes.post('/', ensureAuth, validate(categorySchema), /*
   #swagger.tags = ['Categories']
   #swagger.summary = 'Create a category'
-  #swagger.description = 'Creates a new category.'
+  #swagger.description = 'Creates a new category. Requires an active GitHub-authenticated session.'
+  #swagger.security = [{ "sessionAuth": [] }]
   #swagger.parameters['body'] = {
     in: 'body',
     required: true,
@@ -43,10 +45,11 @@ routes.post('/', validate(categorySchema), /*
 categoriesController.createCategory);
 
 // Update a category
-routes.put('/:id', validate(categorySchema), /*
+routes.put('/:id', ensureAuth, validate(categorySchema), /*
   #swagger.tags = ['Categories']
   #swagger.summary = 'Update a category'
-  #swagger.description = 'Updates an existing category.'
+  #swagger.description = 'Updates an existing category. Requires an active GitHub-authenticated session.'
+  #swagger.security = [{ "sessionAuth": [] }]
   #swagger.parameters['id'] = {
     in: 'path',
     description: 'Category MongoDB ObjectId',
@@ -66,10 +69,11 @@ routes.put('/:id', validate(categorySchema), /*
 categoriesController.updateCategory);
 
 // Delete a category
-routes.delete('/:id', /*
+routes.delete('/:id', ensureAuth, /*
   #swagger.tags = ['Categories']
   #swagger.summary = 'Delete a category'
-  #swagger.description = 'Deletes a category by its MongoDB ObjectId.'
+  #swagger.description = 'Deletes a category by its MongoDB ObjectId. Requires an active GitHub-authenticated session.'
+  #swagger.security = [{ "sessionAuth": [] }]
   #swagger.parameters['id'] = {
     in: 'path',
     description: 'Category MongoDB ObjectId',
